<resources>

    <string name="app_name">ParKQing</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ParKQing</string>
    <string name="edit_location_str0">Name the location!</string>
    <string name="button_park">Parkq it!</string>
    <string name="address">Address:</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Your Lat/Long:</string>
    <string name="label_ploc_latlng">Destination Lat/Long:</string>
    <string name="label_direction">Direction</string>
    <string name="distance">Distance:</string>
    <string name="loc_name">Location Name</string>
    <string name="save_location">Remember ParKQing</string>
    <string name="recentLocation">Recent Locations</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="title_activity_display_parking_location">Parking Location</string>
    <string name="title_activity_recent_location">Recent Locations</string>
    <string name="title_activity_view_location">View a Location</string>
    <string name="pLocation">ParKQing Location</string>
    <string name="view_recent">View Recent Parkings</string>
    <string name="get_nav">Get Navigation</string>

</resources>