<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


	<TextView android:id="@+id/label_loc_name" 
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:textSize="22sp" 
	    android:text="@string/loc_name" />
	<EditText android:id="@+id/edit_loc_name"
	    android:layout_width="160dp" 
	    android:layout_height="wrap_content"
	    android:hint="@string/edit_location_str0" />
	<Button android:id="@+id/save_location"
	    android:layout_width="160dp"
	    android:layout_height="wrap_content"
	    android:onClick="sendParkMessage"
	    android:text="@string/button_park" />
	<TextView android:id="@+id/label_latlng" 
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:textSize="22sp" 
	    android:text="@string/latlng" />
    <TextView android:id="@+id/latlng" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />
    <TextView android:id="@+id/label_address" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:textSize="22sp"
        android:text="@string/address" />
    <TextView android:id="@+id/address" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:textSize="20sp" />
    <Button android:id="@+id/view_recent_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="sendParkMessage"
	    android:text="@string/view_recent" />    

</LinearLayout>
